[package]
name = "stuart_math"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stuart_core = { version = "0.2.7", default-features = false }
mathjax_svg = "=3.1.1"
xmltree = "0.10.3"

[lib]
crate-type = ["cdylib"]
