[package]
name = "stuart_math"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stuart_core = { version = "0.2.7", default-features = false }
mathjax_svg = { git = "https://github.com/w-henderson/mathjax_svg", branch = "fix/multiple-svgs" }
xmltree = "0.10.3"

[lib]
crate-type = ["cdylib"]
